# lez666-g1-sim2crawl

./: .gitignore  INSTALL.md  KEYBOARD_SIM2SIM.md  LICENSE  QUICKSTART.md  README.md  RUN_SIMULATION.md  SETUP_COMPLETE.md  check_setup.py  run_sweep.py  setup.sh  sweep_analyzer.py  sweep_script_with_analysis.py  test_gamepad.py  test_simulation.py
3d-printed-parts/: forearm.3mf  head-attachment.3mf  head-mask.3mf  head-wigtop.3mf
assets/: animation_rc4.json  crawl-pose.json  g1_23dof_simple-forearm-backup.usd  g1_23dof_simple-forearm.usd  quad-pose.json  stand-pose-rc0.json  stand-pose-rc1.json  stand-pose-rc2.json
deployment/: crawl_policy.pt  crawl_policy_old.pt  deploy_real.py  deploy_real_OLD.py  deploy_sim.py  deploy_sim_B.py  main.py  main_log.py  policy.pt  policy_shamble.pt  pyproject.toml  sim-poses.py  temp.ipynb  utils.py
deployment/_REF/: output-example.json  sim-poses.py
deployment/archive/: policy_crawl.pt
deployment/av_test/: g1_audio_client_example.py  statecheck.py  wav.py
deployment/g1_description/: g1-alt.xml  g1.xml  scene_mjx_alt.xml  scene_torso_collision_test.xml
deployment/policies/: policy_shamble.pt
scripts/experiments/: animation_player.py  check_joint_limits.py  isaac_run_sim2sim.py  policy.pt  pose_viewer.py  random_pose_contacts.py  reward_interpolation_viewer.py  robot-animation.py  test_com_forward_reward.py  test_symmetry.py
scripts/rsl_rl/: play.py  (+2 more)
sim2sim_mj/: MUJOCO_LOG.TXT  README.md  README_keyboard_en.md  README_keyboard_zh.md  gamepad_test.py  requirements.txt  run_sim2sim.py  run_sim2sim_keyboard.py  scene.xml
(+48 files in other folders)
