[project]
name = "crawl-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy==1.24.4",
    "torch",
    "unitree-sdk2py",
]

[tool.uv.sources]
torch = { url = "https://developer.download.nvidia.cn/compute/redist/jp/v511/pytorch/torch-2.0.0+nv23.05-cp38-cp38-linux_aarch64.whl" }
unitree-sdk2py = { path = "../unitree_sdk2_python", editable = true }
